// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTransactions has the expected html structure if user has signed in 1`] = `
<div
  class="tm-page"
  data-title="Transactions"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  0.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <short-bech32-stub
              address=""
            />
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tool-bar"
          >
            <a
              class="refresh-button"
            >
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
             
            <a
              class="search-button"
            >
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
             
            <!---->
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <modal-search-stub
      type="transactions"
    />
     
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
     
  </main>
</div>
`;

exports[`PageTransactions has the expected html structure if user hasn't signed in 1`] = `
<div
  class="tm-page"
  data-title="Transactions"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <!---->
           
          <div
            class="tool-bar"
          >
            <a
              class="refresh-button"
            >
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
             
            <a
              class="search-button"
            >
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <!---->
             
            <!---->
             
            <button
              class="tm-btn"
              id="signIn-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Sign In
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <modal-search-stub
      type="transactions"
    />
     
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
     
  </main>
</div>
`;

exports[`PageTransactions should filter the transactions 1`] = `
<div
  class="tm-page"
  data-title="Transactions"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  0.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <short-bech32-stub
              address=""
            />
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tool-bar"
          >
            <a
              class="refresh-button"
            >
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
             
            <a
              class="search-button"
            >
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
             
            <!---->
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <modal-search-stub
      type="transactions"
    />
     
    <tm-li-any-transaction-stub
      address="tb1d4u5zerywfjhxuc9nudvw"
      bondingdenom="STAKE"
      proposalsurl="/governance"
      slot="managed-body"
      transaction="[object Object]"
      unbondingtime="NaN"
      validators=""
      validatorsurl="/staking/validators"
    />
     
  </main>
</div>
`;
